# g-signal-collector

./: CMakeLists.txt  README.md  collector.c  signal-info-pool.c  signal-info-pool.h  signal-info.c  signal-info.h
src/: CMakeLists.txt  collector.c  signal-info-pool-dumper.c  signal-info-pool-dumper.h  signal-info.c
test/: CMakeLists.txt  clutter-rectangles.c  gtk-rectangles.c
